--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -36,7 +36,7 @@
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
                             @RenderSection("SidebarMenu", false)
-                            <li class="@Html.Raw((controllerName == "ManageTicket") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
+                            <li class="@Html.Raw((controllerName == "ManageTicket" || controllerName == "Ticket") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
                             <li class="@Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
                             <li class="@Html.Raw((controllerName == "BusinessRule") ? "active" : "")"><a href="/Helpdesk/BusinessRule">Business Rules</a></li>
                             <li class="@Html.Raw((controllerName == "Report") ? "active" : "")"><a href="/Helpdesk/Report">Report</a></li>
