--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -274,7 +274,7 @@
                 </button>
                 <h4 class="modal-title">Refer older tickets</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="min-height: 400px;">
                 <div style="text-align: center">
                     <span class="big-label">Keyword:</span> <input type="text" id="refer-older-tickets-search" class="big-textbox" />
                 </div>
