--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -92,25 +92,17 @@
                     <h4><i class="fa fa-info-circle"></i>  Detail</h4>
                 </div>
                 <div class="col-sm-12 row-content">
-                    <div class="col-sm-6 col-content ">
-                        <div class="col-sm-4 labels">
-                            <b>Created by: </b>
-                        </div>
-                        <div class="col-sm-8">@Html.DisplayFor(model => model.CreatedBy)</div>
-                    </div>
+                    @*<div class="col-sm-6 col-content ">
+                            <div class="col-sm-4 labels">
+                                <b>Created by: </b>
+                            </div>
+                            <div class="col-sm-8">@Html.DisplayFor(model => model.CreatedBy)</div>
+                        </div>*@
                     <div class="col-sm-6 col-content ">
                         <div class="col-sm-4 labels">
                             <b>Type: </b>
                         </div>
                         <div class="col-sm-8">@Html.DisplayFor(model => model.Type)</div>
-                    </div>
-                </div>
-                <div class="col-sm-12 row-content">
-                    <div class="col-sm-6 col-content ">
-                        <div class="col-sm-4 labels">
-                            <b>Assigned by: </b>
-                        </div>
-                        <div class="col-sm-8">@Html.DisplayFor(model => model.AssignedBy)</div>
                     </div>
                     <div class="col-sm-6 col-content ">
                         <div class="col-sm-4 labels">
@@ -171,19 +163,38 @@
                         <div class="col-sm-8">@Html.DisplayFor(model => model.Priority)</div>
                     </div>
                 </div>
+                <div class="col-sm-12 row-content">
+                    <div class="col-sm-12 col-content ">
+                        <div class="col-sm-2 labels">
+                            <b>Tags: </b>
+                        </div>
+                        <div class="col-sm-10">
+                            <span id="tags"></span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-12 row-content">
+                    <div class="col-sm-12 col-content ">
+                        <div class="col-sm-2 labels">
+                            <b>Note: </b>
+                        </div>
+                        <div class="col-sm-10">@Html.DisplayFor(model => model.Note)</div>
+                    </div>
+                </div>
                 <div class="col-sm-12 header-content">
                     <h4><i class="fa fa-clock-o"></i>  Date and time</h4>
                 </div>
                 <div class="col-sm-12 row-content">
                     <div class="col-sm-6">
                         <div class="col-sm-4 labels">
-                            <b>Created date: </b>
+                            <b>Created time: </b>
                         </div>
                         <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.CreateTime)</div>
                     </div>
                     <div class="col-sm-6">
                         <div class="col-sm-4 labels">
-                            <b>Last modified date: </b>
+                            <b>Last modified time: </b>
                         </div>
                         <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ModifiedTime)</div>
                     </div>
@@ -191,29 +202,29 @@
                 <div class="col-sm-12 row-content">
                     <div class="col-sm-6">
                         <div class="col-sm-4 labels">
-                            <b>Scheduled start time: </b>
+                            <b>Schedule start date: </b>
                         </div>
-                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ScheduleStartTime)</div>
+                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ScheduleStartDate)</div>
                     </div>
                     <div class="col-sm-6 ">
                         <div class="col-sm-4 labels">
-                            <b>Schedule end time: </b>
+                            <b>Schedule end date: </b>
                         </div>
-                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ScheduleEndTime)</div>
+                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ScheduleEndDate)</div>
                     </div>
                 </div>
                 <div class="col-sm-12 row-content">
                     <div class="col-sm-6 ">
                         <div class="col-sm-4 labels">
-                            <b>Actual start time: </b>
+                            <b>Actual start date: </b>
                         </div>
-                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ActualStartTime)</div>
+                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ActualStartDate)</div>
                     </div>
                     <div class="col-sm-6 ">
                         <div class="col-sm-4 labels">
-                            <b>Actual end time: </b>
+                            <b>Actual end date: </b>
                         </div>
-                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ActualEndTime)</div>
+                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.ActualEndDate)</div>
                     </div>
                 </div>
                 <div class="col-sm-12 header-content">
@@ -326,7 +337,12 @@
 <!-- /.modal -->
 
 @section scripts{
+    <script src="~/Scripts/helpdesk-manage-ticket.js"></script>
     <script>
+        $(document).ready(function () {
+            $("#tags").html(loadKeywordToTags('@Model.Tags'));
+        });
+
         $("#search-btn").on("click", function () {
             $.ajax({
                 "url": "/Ticket/SearchSolution/",
@@ -429,44 +445,42 @@
             $("#search-btn").click();
         });
 
-        $("#solveBtn, #saveBtn")
-            .on("click",
-                function () {
-                    $.ajax({
-                        "url": "/Ticket/SolveTicket/",
-                        "method": "POST",
-                        "data": {
-                            id: $("#ticketId").val(),
-                            solution: $("#new-solution").val(),
-                            command: $(this)[0].id
-                        },
-                        success: function (data) {
-                            if (!data.success) {
-                                noty({
-                                    text: data.msg,
-                                    layout: "topRight",
-                                    type: "error",
-                                    timeout: 2000
-                                });
-                            } else {
-                                noty({
-                                    text: data.msg,
-                                    layout: "topCenter",
-                                    type: "success",
-                                    timeout: 2000
-                                });
-                                if (data.userRole == "Helpdesk") {
-                                    setTimeout(function () {
-                                        window.location.href = "/HelpDesk/ManageTicket/";
-                                    }, 1000);
-                                } else if (data.userRole == "Technician") {
-                                    setTimeout(function () {
-                                        window.location.href = "/Technician/ManageTicket/";
-                                    }, 1000);
-                                }
-                            }
+        $("#solveBtn, #saveBtn").on("click", function () {
+            $.ajax({
+                "url": "/Ticket/SolveTicket/",
+                "method": "POST",
+                "data": {
+                    id: $("#ticketId").val(),
+                    solution: $("#new-solution").val(),
+                    command: $(this)[0].id
+                },
+                success: function (data) {
+                    if (!data.success) {
+                        noty({
+                            text: data.msg,
+                            layout: "topRight",
+                            type: "error",
+                            timeout: 2000
+                        });
+                    } else {
+                        noty({
+                            text: data.msg,
+                            layout: "topCenter",
+                            type: "success",
+                            timeout: 2000
+                        });
+                        if (data.userRole == "Helpdesk") {
+                            setTimeout(function () {
+                                window.location.href = "/HelpDesk/ManageTicket/";
+                            }, 1000);
+                        } else if (data.userRole == "Technician") {
+                            setTimeout(function () {
+                                window.location.href = "/Technician/ManageTicket/";
+                            }, 1000);
                         }
-                    });
-                });
+                    }
+                }
+            });
+        });
     </script>
 }
