--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -525,7 +525,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-12 ticket_filter collapse" style="padding-top: 10px; border: solid 1px rgb(189, 191, 191)" id="filter-div">
+                <div class="col-sm-12 ticket_filter collapse" style="margin: 10px 0px; border: solid 1px rgb(189, 191, 191)" id="filter-div">
                     <div class="row" style="padding: 16px">
                         <div class="col-sm-6">
                             <div class="form-group filter_created_time" data-role="filter_created_time">
