--- a/TMS/TMS/Areas/HelpDesk/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Home/Index.cshtml
@@ -148,7 +148,7 @@
     <div class="col-sm-8">
         <div class="box box-solid">
             <div class="box-header bg-light-blue">
-                <span class="box-title" style="padding-left: 5px"><i class="fa fa-tags"></i>&nbsp;&nbsp;New Tickets</span>
+                <span class="box-title" style="padding-left: 5px"><i class="fa fa-tags"></i>&nbsp;&nbsp;Open Tickets</span>
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool text-white" data-widget="collapse"><i class="fa fa-minus"></i></button>
                     <button type="button" class="btn btn-box-tool text-white" data-widget="remove"><i class="fa fa-times"></i></button>
