--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -158,6 +158,10 @@
                                 <label class="control-label">ACTUAL END DATE</label>
                                 @Html.TextBoxFor(m => m.ActualEndDate, "{0:dd/MM/yyyy HH:mm}", new { @class = "form-control datetimep" })
                             </div>
+                            <div class="col-md-12 col-xs-12">
+                                <label class="control-label">DUE BY DATE</label>
+                                @Html.TextBoxFor(m => m.DueByDate, "{0:dd/MM/yyyy HH:mm}", new { @class = "form-control datetimep" })
+                            </div>
                             <div class="col-md-6 col-xs-6">
                                 <label class="control-label">CREATED BY</label>
                                 <input type="hidden" id="createdId" name="CreatedId" value="@Model.CreatedId">
