--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -35,9 +35,32 @@
     background-color: #605ca8 !important;
 }
 
+.dropdown-menu {
+    -webkit-box-shadow: 0px 5px 7px 2px rgba(0,0,0,0.39);
+    -moz-box-shadow: 0px 5px 7px 2px rgba(0,0,0,0.39);
+    box-shadow: 0px 5px 7px 2px rgba(0,0,0,0.39);
+}
+
+#notification-list {
+    max-height: 400px;
+}
+
+    #notification-list li a {
+        white-space: pre-wrap !important;
+        height: 105px !important;
+    }
+
+.notification-item:hover {
+    background-color: #f1eeee !important;
+}
+
 .not-read {
     background-color: #EDF2FA !important;
 }
+
+    .not-read:hover {
+        background-color: #f1eeee !important;
+    }
 
 @media screen and (min-width: 768px) {
     .modal:before {
