--- a/TMS/TMS/Areas/HelpDesk/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Home/Index.cshtml
@@ -86,14 +86,14 @@
             <span class="info-box-icon"><i class="fa fa-warning"></i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Unapproved tickets</span>
-                <span class="info-box-number">@unapprovedTickets.Count()</span>
+                <h3 class="info-box-number">@unapprovedTickets.Count()</h3>
             </div>
         </div>
         <div class="info-box bg-red">
             <span class="info-box-icon"><i class="fa fa-bell"></i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Coming overdue tickets</span>
-                <span class="info-box-number">@warningTickets.Count()</span>
+                <h3 class="info-box-number">@warningTickets.Count()</h3>
             </div>
         </div>
         <div class="box box-solid">
@@ -131,7 +131,7 @@
             else
             {
                 <div class="box-footer text-center">
-                    <i>There is no urgent ticket at this moment.</i>
+                    <i>There is no coming due ticket at this moment.</i>
                 </div>
             }
         </div>
