--- a/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
@@ -23,7 +23,7 @@
     </style>*@
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-blue layout-top-nav">
+<body class="hold-transition skin-black layout-top-nav">
     <div class="wrapper">
         <header class="main-header">
             <nav class="navbar navbar-static-top">
@@ -36,10 +36,8 @@
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
                             @RenderSection("SidebarMenu", false)
-                            <li class="@Html.Raw((controllerName == "ManageTicket" || controllerName == "Ticket") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
-                            <li class="@Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
-                            <li class="@Html.Raw((controllerName == "BusinessRule") ? "active" : "")"><a href="/Helpdesk/BusinessRule">Business Rules</a></li>
-                            <li class="@Html.Raw((controllerName == "Report") ? "active" : "")"><a href="/Helpdesk/Report">Report</a></li>
+                            <li class="@Html.Raw((controllerName == "Department") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
+                            <li class="@Html.Raw((controllerName == "Manage System Config") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
                             <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Helpdesk/Profile">My profile</a></li>
                         </ul>
                     </div>
@@ -47,20 +45,6 @@
                     <!-- Navbar Right Menu -->
                     <div class="navbar-custom-menu">
                         <ul class="nav navbar-nav">
-                            <!-- Notifications Menu -->
-                            <li class="dropdown notifications-menu">
-                                <!-- Menu toggle button -->
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-bell-o"></i>
-                                    <span class="label label-warning" id="notification-count"></span>
-                                </a>
-                                <ul class="dropdown-menu" style="width: 400px;">
-                                    <li>
-                                        <ul class="menu" id="notification-list"></ul>
-                                    </li>
-                                    @*<li class="footer"><a href="#">View all</a></li>*@
-                                </ul>
-                            </li>
                             <!-- User Account Menu -->
                             <li class="dropdown user user-menu">
                                 <!-- Menu Toggle Button -->
