--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -67,48 +67,50 @@
 @section scripts{
     <script>
         $("#saveBtn").on("click", function () {
-            $("#saveBtn").attr("disabled", true);
-            var formData = new FormData($('#create-ticket-form')[0]);
-            $.ajax({
-                "url": "/Ticket/Create/",
-                "method": "POST",
-                "data": formData,
-                success: function (data) {
-                    if (!data.success) {
+            if (checkUploadFile()) {
+                $("#saveBtn").attr("disabled", true);
+                var formData = new FormData($('#create-ticket-form')[0]);
+                $.ajax({
+                    url: "/Ticket/Create/",
+                    method: "POST",
+                    data: formData,
+                    success: function (data) {
+                        if (!data.success) {
+                            noty({
+                                text: data.msg,
+                                layout: "topRight",
+                                type: "error",
+                                timeout: 2500
+                            });
+                        }
+                        else {
+                            noty({
+                                text: data.msg,
+                                layout: "topCenter",
+                                type: "success",
+                                timeout: 2500
+                            });
+                            setTimeout(function () {
+                                window.location.href = "/Ticket/Index";
+                            }, 1000);
+                        }
+                    },
+                    contentType: false,
+                    processData: false,
+                    enctype: 'multipart/form-data',
+                    error: function (e) {
                         noty({
-                            text: data.msg,
-                            layout: "topRight",
+                            text: "Some error occured! Please try again!",
                             type: "error",
+                            layout: "topRight",
                             timeout: 2500
                         });
+                    },
+                    complete: function () {
+                        $("#saveBtn").attr("disabled", false);
                     }
-                    else {
-                        noty({
-                            text: data.msg,
-                            layout: "topCenter",
-                            type: "success",
-                            timeout: 2500
-                        });
-                        setTimeout(function () {
-                            window.location.href = "/Ticket/Index";
-                        }, 1000);
-                    }
-                },
-                contentType: false,
-                processData: false,
-                enctype: 'multipart/form-data',
-                "error": function (e) {
-                    noty({
-                        text: "Some error occured! Please try again!",
-                        type: "error",
-                        layout: "topRight",
-                        timeout: 2500
-                    });
-                },
-                complete: function () {
-                    $("#saveBtn").attr("disabled", false);
-                }
-            });
+                });
+            }
         });
     </script>
 }
