--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -350,6 +350,12 @@
                                         </div>
                                         <div class="col-sm-6"><span id="ticket-solved-date"></span></div>
                                     </div>
+                                    <div class="col-sm-6">
+                                        <div class="col-sm-6 labels">
+                                            <b>Due by date: </b>
+                                        </div>
+                                        <div class="col-sm-6"><span id="ticket-due-by-date"></span></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
