--- a/TMS/TMS/Views/Ticket/TicketDetail.cshtml
+++ b/TMS/TMS/Views/Ticket/TicketDetail.cshtml
@@ -319,6 +319,12 @@
                         </div>
                         <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.SolvedDateString)</div>
                     </div>
+                    <div class="col-sm-6 ">
+                        <div class="col-sm-4 labels">
+                            <b>Due by date: </b>
+                        </div>
+                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.DueByDateString)</div>
+                    </div>
                 </div>
             </div>
         </div>
