--- a/TMS/TMS/Views/Ticket/TicketDetail.cshtml
+++ b/TMS/TMS/Views/Ticket/TicketDetail.cshtml
@@ -323,7 +323,7 @@
                         <div class="col-sm-4 labels">
                             <b>Due date: </b>
                         </div>
-                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.OverdueDateString)</div>
+                        <div class="col-sm-8 datetimerow">@Html.DisplayFor(model => model.DueByDateString)</div>
                     </div>
                 </div>
             </div>
